[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lrxy"
version = "0.1.1"
dependencies = [
  "requests",
  "mutagen",
  "colorama",
  "argparse",
]
requires-python = ">=3.10"
description = "A synced lyric fetcher and embedder for music files"
readme = "README.md"
keywords = ["synced-lyrics", "lyrics-fetcher"]

[project.scripts]
lrxy = "lrxy.__main__:main"

[project.urls]
Repository = "https://github.com/pxeemo/lrxy.git"

