[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lrxy"
version = "1.0.0"
dependencies = [
  "requests",
  "mutagen",
  "argparse",
]
requires-python = ">=3.10"
description = "A synced lyric fetcher and embedder for music files"
readme = "README.md"
license = { file = "LICENSE.md" }
keywords = ["synced-lyrics", "lyrics-fetcher"]
authors = [
    { name = "pxeemo", email = "pxeemo@gmail.com" }
]

[project.scripts]
lrxy = "lrxy.__main__:main"

[project.urls]
Repository = "https://github.com/pxeemo/lrxy.git"

